--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-.wrapper {
+.main-wrapper {
     min-height: 100vh;
-    width: 100%;
 }
 
 .content-container {
     display: flex;
-    width: 100%;
+    width : 440px;
     height: 100vh;
 }
 
