--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.page-container {
+    @apply flex flex-col items-center justify-center min-h-screen bg-gray-400;
+}
