--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,10 @@
-body {
-
+:root {
+    --primary-color: #6C63FF
 }
 
-
+body {
+    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .page-container::before {
     content: '';
