--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,13 @@ body {
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.h1-primary-text {
+    height : auto;
+    font-size : 32px;
+    font-weight : 600;
+    color : #fff;
+}
+
 .page-container {
     background-color: transparent;
 }
