--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,31 +1,23 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 :root {
-    --primary-color: #181a1f
+    --primary-color: #246BFD;
+    --background-product-color : #181a20;
+    --background-dev-color : #2b2b2e;
 }
 
 body {
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.h1-primary-text {
-    height : auto;
-    font-size : 32px;
-    font-weight : 600;
-    color : #fff;
-}
-
-.page-container {
-    background-color: transparent;
-}
-
-.main-wrapper {
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
+    font-family: 'Pretendard-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color : var(--background-dev-color);
 }
 
 .content-container {
-    width: 440px;
-    background-color: #181a1f;
+    background-color: var(--background-product-color);
     position: relative;
     overflow: hidden;  /* 그라디언트가 컨테이너를 벗어나지 않도록 */
 }
@@ -68,4 +60,36 @@ body {
     mix-blend-mode: overlay;
     opacity: 0.5;
     z-index: 0;
+}
+
+.primary-info-text {
+    height : auto;
+    font-size : 42.5px;
+    font-weight : 600;
+    color : #fff;
+}
+
+.info-point-text {
+    height : auto;
+    font-size : 42.5px;
+    font-weight: 600;
+    color : var(--primary-color);
+}
+
+.big-button-text {
+    font-size : 20px;
+    font-weight: 600;
+    color :#fff;
+}
+
+.small-button-text {
+    font-size : 15px;
+    font-weight: 600;
+    color : #fff;
+}
+
+.medium-text {
+    font-size : 20px;
+    font-weight: 600;
+    color : #fff;
 }
