[Fix] Primiary CSS 선택자 네이밍 변경

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,7 +62,7 @@ body {
     z-index: 0;
 }
 
-h1-primary-text {
+.primary-info-text {
     height : auto;
     font-size : 32px;
     font-weight : 600;
