--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,31 +65,31 @@ body {
 .primary-info-text {
     height : auto;
     font-size : 42.5px;
-    font-weight : 600;
+    font-weight : bold;
     color : #fff;
 }
 
 .info-point-text {
     height : auto;
     font-size : 42.5px;
-    font-weight: 600;
+    font-weight: bold;
     color : var(--primary-color);
 }
 
 .big-button-text {
     font-size : 20px;
-    font-weight: 600;
+    font-weight: bold;
     color :#fff;
 }
 
 .small-button-text {
     font-size : 15px;
-    font-weight: 600;
+    font-weight: bold;
     color : #fff;
 }
 
 .medium-text {
     font-size : 20px;
-    font-weight: 600;
+    font-weight: bold;
     color : #fff;
 }
