--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,8 +12,8 @@
 }
 
 body {
-    font-family: 'Pretendard-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color : var(--background-dev-color);
+    font-family: -apple-system, Pretendard, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color : var(--background-product-color);
 }
 
 .content-container {
