--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: -apple-system, Pretendard, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color : var(--background-product-color);
+    background-color : var(--background-dev-color);
 }
 
 .content-container {
