--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 :root {
     --primary-color: #246BFD;
     --background-product-color : #181a20;
-    --background-dev-color : #2b2b2e;
+    --background-dev-color : #181a20;
 }
 
 body {
